<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kidsi</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Kidsi</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">GCM: device successfully registered!</string>
    <string name="gcm_unregistered">GCM: device successfully unregistered!</string>
    <string name="gcm_message">GCM: you got message!</string>
    <string name="gcm_error">GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">Demo Server: successfully added device!</string>
    <string name="server_unregistered">Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="defaultText">  Select User </string>

    <drawable name="Blue">#b0e0e6</drawable>
    <drawable name="white">#ffffff</drawable>
    <drawable name="black">#000000</drawable>
    <drawable name="green">#347C2C</drawable>
    <drawable name="pink">#FF00FF</drawable>
    <drawable name="violet">#a020f0</drawable>
    <drawable name="grey">#cccccc</drawable>
    <drawable name="red">#C11B17</drawable>
    <drawable name="yellow">#FFFF8C</drawable>
    <drawable name="PowderBlue">#b0e0e6</drawable>
    <drawable name="brown">#2F1700</drawable>

    <string name="select_Category">Select User</string>

    <drawable name="darkgrey">#606060</drawable>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>HOME</item>
        <item>SCHOOL INFO</item>
        <item>TEACHER INFO</item>
        <item>MY PROFILE</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/schoolinfo</item>
        <item>@drawable/teacherinfo</item>
        <item>@drawable/ic_parent_info</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_home">Kidsi</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="title_activity_chat_main">ChatMainActivity</string>
    <string name="title_activity_show_message">ShowMessage</string>
    <string name="title_activity_grid_view_example">GridViewExample</string>
    <string name="title_activity_main_receiver">MainReceiver</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_send_push_notification">SendPushNotification</string>
    <string name="title_activity_test_show_message">TestShowMessage</string>
    <string name="title_activity_livecam">LivecamActivity</string>
    <string name="title_activity_health">Health</string>
    <string name="title_activity_perfamance">Performance</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="ok">Ok</string>
    <string name="dummy_content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </string>
    <string name="profile_pic">Profile Picture</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="health_chart">Health Chart</string>
    <string name="performance_chart">Performance Chart</string>
    <string name="live_cam">Live Camera</string>
    <string name="chat">Chat</string>
    <string name="milk">Milk</string>
    <string name="food">Food</string>
    <string name="sleep">Sleep</string>
    <string name="play">Play</string>
    <string name="Singing_talking">Singing/Talking</string>
    <string name="drawing">Drawing</string>
    <string name="font_name">tt0142m_.ttf</string>

    <declare-styleable name="customFont">
        <attr name="android:fontFamily" />
        <attr name="android:textStyle" />
    </declare-styleable>

    <string name="title_activity_about_app">AboutAppActivity</string>
    <string name="title_activity_privacy_policy">PrivacyPolicyActivity</string>
    <string name="title_activity_kids_profile">KidsProfileActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>

</resources>
