<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="220dp"
    android:orientation="vertical"
    android:background="@drawable/grid_background"
    android:gravity="center_horizontal"
    android:layout_gravity="top|bottom|center"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">


    <!--<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="220dp"
        android:orientation="vertical"
        android:background="@drawable/grid_background"
        android:gravity="center_horizontal"
        android:layout_gravity="top|bottom|center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">-->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/profile_pic_background"
            android:padding="10dp"
            android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="top|center"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="120dp"
                android:id="@+id/ImageViewController_ProfilePic"
                android:contentDescription="@string/profile_pic"
                android:src="@drawable/ic_teacher_profile"
                android:layout_gravity="center" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher_name"
            android:id="@+id/TextViewController_ParentName_Online"
            android:layout_gravity="left"
            android:textColor="#000000"
            android:layout_marginLeft="15dp"
            android:textSize="12dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_number"
                android:id="@+id/TextViewController_ParentMobile"
                android:textSize="12dp"
                android:textColor="#000000"
                />
            <View
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@drawable/online_green_drawable"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp" />

        </LinearLayout>
   <!-- </LinearLayout>-->
</LinearLayout>
