<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_chat_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:src="@drawable/ic_performance_show" />


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.5"
        android:gravity="center_horizontal|center_vertical"
        android:background="@drawable/universal_background"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:src="@drawable/ic_play"
                    android:layout_weight="0.8"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <org.mdcconcepts.kidsi.customitems.CustomTextView
                        android:fontFamily="@string/font_name"
                        android:textSize="16sp"
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/play"
                        android:textColor="#ffffff" />

                    <RatingBar
                        android:id="@+id/ratingBar_play"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:progressDrawable="@drawable/apptheme_ratingbar_full_holo_light"
                        android:stepSize="1" />

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/menu_line_hr" />


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_drawing"
                    android:layout_weight="0.8" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <org.mdcconcepts.kidsi.customitems.CustomTextView
                        android:fontFamily="@string/font_name"
                        android:textSize="16sp"
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/drawing"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#ffffff" />

                    <RatingBar
                        android:id="@+id/ratingBar_drawing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:isIndicator="true"
                        android:stepSize="1"
                        android:progressDrawable="@drawable/apptheme_ratingbar_full_holo_light"
                        />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_line_hr"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">


                <ImageView

                    android:id="@+id/imageView2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:src="@drawable/ic_singing"
                    android:layout_weight="0.8"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <org.mdcconcepts.kidsi.customitems.CustomTextView
                        android:fontFamily="@string/font_name"
                        android:textSize="16sp"
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/Singing_talking"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#ffffff" />

                    <RatingBar
                        android:id="@+id/ratingBar_sing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:isIndicator="true"
                        android:progressDrawable="@drawable/apptheme_ratingbar_full_holo_light"
                       />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
